tests/fixtures/invalid/array_length_star_local.c
int main(void) {
    int values[*];
    return 0;
}
